--- a/hdms-webapp/src/main/resources/templates/login.html
+++ b/hdms-webapp/src/main/resources/templates/login.html
@@ -33,6 +33,11 @@
                 会话已过期，请重新登录
             </div>
         </div>
+        <div class="text-left">
+            <div class="alert alert-info">
+                演示账号：user2/111111
+            </div>
+        </div>
         <div class="input-group-icon m-b">
             <i class="glyphicon glyphicon-user input-icon"></i>
             <input type="text" name="username" class="form-control" placeholder="用户名" required autofocus>
